First commit and fix overlapping text and logo

--- a/core/static/core/style.scss
+++ b/core/static/core/style.scss
@@ -596,10 +596,8 @@ header {
     text-align: center;
     width: 19%;
     float: left;
-    min-width: 10em;
+    min-width: 15em;
     margin: 0em;
-    margin-right: 0.5em;
-    margin-top: 0.5em;
     img {
       max-height: 15em;
       max-width: 12em;
